plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.example.campusnavigation'
    compileSdk {
        version = release(36)
    }

    defaultConfig {
        applicationId "com.example.campusnavigation"
        minSdk 24
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'com.tencent.map:tencent-map-vector-sdk:5.7.0'
}